unpackaged/main/default/objects/Account/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <description>Referrer field, comes from Lead during mapping</description>
    <inlineHelpText>Referrer field, comes from Lead during mapping</inlineHelpText>
    <label>Referrer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>