unpackaged/main/default/objects/Account/fields/Scheduled_Drive_Max_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Drive_Max_Date__c</fullName>
    <description>Maximum Drive Date of opportunities where Stage not in Withdrawn, Cancelled, Excluded</description>
    <label>Scheduled Drive Max Date</label>
    <summarizedField>Opportunity.Drive_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Withdrawn, Cancelled, Excluded</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>