unpackaged/main/default/objects/Account/fields/Secondary_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Secondary_Reviewer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>