unpackaged/main/default/objects/Account/fields/ShippingStreet_2__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet_2__c</fullName>
    <label>Mailing Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>