unpackaged/main/default/objects/Account/fields/sked_Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Availability_Type__c</fullName>
    <label>Availability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Availability Only</fullName>
            </value>
            <value>
                <fullName>Unavailability Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>