unpackaged/main/default/objects/Account/fields/Sponsor_Declines_Online_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Declines_Online_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsor Declines Online Scheduling</label>
    <type>Checkbox</type>
</CustomField>