unpackaged/main/default/objects/Account/fields/Sponsor_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Keyword__c</fullName>
    <description>Validation rule prevents user from saving a value which has special characters (*&amp;?%). 50 character limit. Drive Keyword on the Blood Drive Opportunity object inherits value.</description>
    <inlineHelpText>Keywords are: maximum 50 characters; part of the URL link; used to search for drives on RCB.org.; not required to be unique; not case sensitive; not numbers; not ‘and’, ‘or’, ‘left’, ‘right’ as standalone words; not special characters (, ), *, ?, %,!, ‘,”</inlineHelpText>
    <label>Sponsor Keyword</label>
    <length>50</length>
    <type>Text</type>
</CustomField>