unpackaged/main/default/objects/Account/fields/Text_Demo_6_12__c.field-meta.xml
<CustomField>
    <fullName>Text_Demo_6_12__c</fullName>
    <label>Text Demo June 12</label>
    <length>25</length>
    <type>Text</type>
</CustomField>