unpackaged/main/default/objects/Account/fields/Unmanaged__c.field-meta.xml
<CustomField>
    <fullName>Unmanaged__c</fullName>
    <description>Picklist to capture the Account Unmanaged reason</description>
    <label>Unmanaged Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Territory Vacancy</fullName>
            </value>
            <value>
                <fullName>LOA Vacancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>