unpackaged/main/default/objects/Account/fields/Wellness_Programs__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Programs__c</fullName>
    <label>Wellness Programs</label>
    <type>TextArea</type>
</CustomField>