unpackaged/main/default/objects/Account/recordTypes/Fixed_Site_Account.recordType-meta.xml
<RecordType>
    <fullName>Fixed_Site_Account</fullName>
    <active>true</active>
    <label>Fixed Site Account</label>
</RecordType>