unpackaged/main/default/objects/Account/recordTypes/Mobile_Account.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Account</fullName>
    <active>true</active>
    <label>Mobile Account</label>
</RecordType>