unpackaged/main/default/objects/Account/validationRules/Account_Closure_Reason_Must_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Closure_Reason_Must_Be_Populated</fullName>
    <active>true</active>
    <description>If the &quot;Status&quot; field picklist value is &quot;Closed,&quot; the &quot;Closure Reason&quot; field must be populated.</description>
    <errorConditionFormula>IF(RecordType.DeveloperName==&#39;Fixed_Site_Account&#39;, 
ISPICKVAL(Account_Status__c, &quot;Closed&quot;)&amp;&amp; 
ISBLANK(Closure_Reason__c ), 
false)</errorConditionFormula>
    <errorDisplayField>Closure_Reason__c</errorDisplayField>
    <errorMessage>If the Account Status is &quot;Closed,&quot; you must provide a Closure Reason.</errorMessage>
</ValidationRule>