unpackaged/main/default/objects/Account/validationRules/AccountNameShouldNotBeEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNameShouldNotBeEditable</fullName>
    <active>true</active>
    <description>Account Name should not be editable for DRD Profile and DRD Manager and All APS // HRP-7910</description>
    <errorConditionFormula>AND(
OR(
ISCHANGED(Name),
ISCHANGED(Internal_Name__c)
),
OR(
$Profile.Name = &#39;DRD Profile&#39;,
$Profile.Name = &#39;DRD Manager&#39;,
$Profile.Name = &#39;APS Admin&#39;,
$Profile.Name = &#39;APS Management&#39;,
$Profile.Name = &#39;APS Planner&#39;,
$Profile.Name = &#39;APS Scheduler&#39;
)
)</errorConditionFormula>
    <errorDisplayField>Accepts_Automation2__c</errorDisplayField>
    <errorMessage>DRD and APS User cannot edit Account Name</errorMessage>
</ValidationRule>