unpackaged/main/default/objects/Account/validationRules/Fixed_Site_Owner_Transfer_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Fixed_Site_Owner_Transfer_Restriction</fullName>
    <active>true</active>
    <description>Only APS Profile users and System Admins should be allowed to transfer Fixed Site record types to other users. All other profiles will receive this error message if they attempt to transfer a Fixed Site.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Fixed_Site_Account&quot; &amp;&amp;
ISCHANGED(OwnerId) &amp;&amp;
$Profile.Name  &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
$Profile.Name  &lt;&gt; &quot;APS Profile&quot;</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Only APS staff are able to transfer Fixed Site Accounts to Account Managers.</errorMessage>
</ValidationRule>