unpackaged/main/default/objects/Account/validationRules/Internal_Name_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Name_is_Required</fullName>
    <active>true</active>
    <description>Internal Name should be required for both fixed site and mobile accounts.</description>
    <errorConditionFormula>ISBLANK(Internal_Name__c )</errorConditionFormula>
    <errorDisplayField>Internal_Name__c</errorDisplayField>
    <errorMessage>You must provide an internal name for this account</errorMessage>
</ValidationRule>