unpackaged/main/default/objects/Account/listViews/All_Fixed_Site_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Fixed_Site_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Division__c</columns>
    <columns>Number_of_Future_Drives__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Account_Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Fixed_Site_Account</value>
    </filters>
    <label>All Fixed Sites</label>
</ListView>