unpackaged/main/default/objects/Account/listViews/All_Initial_Review_Pending_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Initial_Review_Pending_Accounts</fullName>
    <columns>National_Name_Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Earliest_Drive_Date__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>District_Manager__c</columns>
    <columns>National_Name__c</columns>
    <columns>National_Name_Initial_Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>National Name_All Initial Rev. Pending</label>
    <sharedTo>
        <group>APS_Users</group>
    </sharedTo>
</ListView>