unpackaged/main/default/objects/Account/listViews/Initial_Review_Pending_Accounts.listView-meta.xml
<ListView>
    <fullName>Initial_Review_Pending_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Earliest_Drive_Date__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Logged_In_User_Initial_Reviewer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>National_Name_Status__c</field>
        <operation>equals</operation>
        <value>Initial Review Pending</value>
    </filters>
    <label>National Name_My Initial Review Pending</label>
    <sharedTo>
        <group>APS_Users</group>
    </sharedTo>
</ListView>