unpackaged/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>Contact_BPL__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Next_Scheduled_Drive__c</columns>
    <columns>Market__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Industry_Code__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Account_Manager_Portfolio__c</columns>
    <columns>District_Manager__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Accepts_Automation2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Mobile_Account</value>
    </filters>
    <filters>
        <field>Accepts_Automation2__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Military</value>
    </filters>
    <label>All Mobile Accounts</label>
</ListView>