unpackaged/main/default/objects/Account/listViews/National_Name_Review_Not_Started_Account.listView-meta.xml
<ListView>
    <fullName>National_Name_Review_Not_Started_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Account_Manager__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>District_Manager__c</columns>
    <columns>National_Name__c</columns>
    <columns>Ready_for_National_Name_Review__c</columns>
    <columns>Account_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready_for_National_Name_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>District_Manager__c</field>
        <operation>contains</operation>
    </filters>
    <label>National Name_Account Review</label>
    <sharedTo>
        <group>APS_Users</group>
    </sharedTo>
</ListView>